更新 Survey 声学Token

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -363,6 +363,192 @@ For instance, LaDiffCodec~\cite{yang2024generative} uses EnCodec tokens to condi
 This is to bridge the gap of reconstruction quality between discrete and continuous representations and improve the codec performance compared to the original acoustic tokens.
 Inference efficiency is a major concern of these models unless specifically optimized in limited sampling steps.
 
+### General-Purpose Acoustic Tokens
+
+#### Motivation
+
+In this section, we describe the most common type of neural acoustic tokens (speech codecs) that are designed only with the objective of speech signal reconstruction.
+Those acoustic tokens are optimized towards better signal or perceptual quality under bitrates as low as possible.
+
+#### Approaches
+
+##### Advanced VQ methods and model architectures
+
+Based on SoundStream and EnCodec, more codecs with advanced VQ methods, network structure, or optimization strategies have been researched with depth.
+As an example, DAC~\cite{kumar2024high} achieves remarkable reconstruction quality by adding periodic inductive bias, better discriminators, modified loss functions, and a better VQ mechanism from ViT-VQGAN~\cite{yu2022vectorquantized} to improve codebook usage.
+Specifically, it performs L2-normed code lookup in a low-dimensional space (e.g. 8 or 32) instead of a high-dimensional space like 1024.
+Other architectural improvements include using frequency-domain inputs~\cite{APCodec,ai24b_interspeech,singlecodec}, variance-constrained residual blocks~\cite{ahn2024hilcodec}, multi-filter bank discriminator~\cite{ahn2024hilcodec}, selective down-sampling back-projection~\cite{zheng2024supercodec}, etc.
+
+Several training tricks are explored, such as not applying VQ with a certain probability and pure adversarial training proposed in Moshi~\cite{kyutai2024moshi}.
+Also, the training of neural speech codecs does not need to be end-to-end, i.e. the learning of VQ representations and signal reconstruction can be separated.
+\cite{audiodec,du2024apcodec+} adopt a two-stage training process that introduces adversarial losses and an additional vocoder after training only with metric losses, to achieve improved quality.
+Additional training criteria around the VQ module are proposed for better VQ utilization, such as delicate code-vector replacement strategy, codebook balancing loss, and similarity loss between consecutive RVQ layers proposed in ERVQ~\cite{zheng2024ervq}.
+
+Other VQ methods besides GVQ or RVQ also exist in speech codecs.
+NDVQ~\cite{niu2024ndvq} improves the capacity of RVQ space by changing codebook {vectors} to parameterized Gaussian {distributions}.
+FSQ has also been introduced to several speech codecs, like SQ-Codec~\cite{yang24l_interspeech} where scalar rounding is applied to each of its 32-dimensional latent space.
+Stable-Codec~\cite{parker2024scalingtransformerslowbitratehighquality} adopts FSQ in a Transformer-based architecture, exhibiting strong scalability to large model sizes up to 950M parameter count.
+It also explores a flexible post-training quantization level adjustment technique and residual FSQ strategy.
+
+Note that most acoustic tokens require multiple quantizers, but \textbf{single-codebook} codecs have also been explored.
+Single-Codec~\cite{singlecodec} designs an encoder consisting of Conformer and bidirectional LSTM to better compress mel spectrogram inputs.
+WavTokenizer~\cite{ji2024wavtokenizer} and BigCodec~\cite{xin2024bigcodec} further explores single-codebook codec modeling with better network designs or larger parameter count.
+TS3-Codec~\cite{wu2024ts3codectransformerbasedsimplestreaming} adopts a fully Transformer design that leads to a better single-codebook codec with fewer computation overhead.
+LSCodec~\cite{guo2024lscodec} also achieves single-codebook coding with speaker disentanglement (Section \ref{sec:acoustic-disen}).
+These single-codebook codecs with remarkably low bitrates offer great benefit to downstream speech generation models on simplicity and efficiency.
+
+##### Temporal Redundancy Reduction
+
+Instead of capturing all the information through VQ layers like the previously mentioned codecs, some researchers have attempted to reduce the redundant bitrate of time-varying VQ codes.
+One reasonable method is to encode the global information in speech, e.g. speaker timbre and channel effects, by a global encoder instead of the time-varying codes.
+
+Disen-TF-Codec~\cite{jiang2023disentangled} is the first to explore VQ-GAN codec models with an additional global encoder that aids the codec decoder.
+In Disen-TF-Codec, the global features are designed to be sequential to adapt to speaker changes during transmission.
+In TiCodec~\cite{ticodec}, the global tokens are time-invariant and vector-quantized instead.
+They are extracted from different segments of an utterance in conjunction with time-varying tokens.
+
+Similar global encoders are also seen in \cite{guo2024socodec,guo2024speaking,singlecodec}.
+FreeCodec~\cite{zheng2024freecodecdisentangledneuralspeech} further incorporates a prosody encoder~\cite{ren2022prosospeech} that compresses the low-frequency range of mel spectrograms into a low frame rate VQ sequence to assist in reconstruction.
+
+Another typical example of temporal redundancy reduction is predictive coding, as seen in TF-Codec~\cite{jiang2023latent}.
+This approach captures temporal-varying information in the latent space by autoregressive prediction, which significantly reduces redundancy and entropy in the residual part for  quantization.
+LMCodec~\cite{LMCodec} employs autoregressive prediction from coarse codes (first RVQ levels) to fine codes (last RVQ levels)~\cite{borsos2023audiolm}, enabling the transmission of fewer codes.
+
+##### Multi-Resolution and Variable-Bitrate Coding
+
+Rather than relying solely on uni-resolution tokens, where all quantizers share the same temporal frequency, it is reasonable to design multi-resolution codecs, because speech contains both fast and slow information streams.
+For instance, many vowels exhibit slowly changing characteristics, while events such as explosive consonants and background noises require fine-grained modeling. Therefore, incorporating multiple temporal resolutions in codecs is likely to reduce the necessary bitrate.
+SNAC~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024} is a notable multi-resolution acoustic token.
+It follows the DAC~\cite{kumar2024high} architecture, but in each RVQ layer, residuals are downsampled before codebook look-up and upsampled afterward.
+This enables SNAC to have three RVQ streams at a frame rate of 12, 23, 47Hz respectively.
+Similarly, CoFi-Codec~\cite{guo2024speaking} achieves multi-resolution coding by GVQ quantizers within its U-Net-based architecture.
+LLM-Codec~\cite{yang2024uniaudio15} also adopts this idea to achieve very low frame rates with semantic distillation (Section \ref{sec:acoustic-distillation}).
+
+In addition to multiple temporal resolutions, it is also feasible to consider the varying information intensities across different speech frames.
+This observation motivates the design of codecs to allocate different numbers of quantizers for different speech frames.
+As an example, VRVQ~\cite{chae2024variable} automatically selects the number of RVQ quantizers per frame by a predictor that is jointly trained with the whole network.
+
+#### Challenges
+
+Despite the emergence of single-codebook and low-bitrate codecs~\cite{singlecodec,ji2024wavtokenizer,xin2024bigcodec,guo2024lscodec}, achieving ideal reconstruction quality with a highly limited VQ space remains a challenging problem.
+
+Additionally, as acoustic tokens aim to encode all necessary information for signal recovery, they may become redundant and overly complex for downstream modeling.
+While scaling up the model size or switching to non-causal networks has been shown to improve performance~\cite{singlecodec,xin2024bigcodec,parker2024scalingtransformerslowbitratehighquality}, these approaches may also compromise streamability or efficiency.
+Furthermore, simply introducing global encoders like \cite{jiang2023disentangled,ticodec,guo2024speaking} does not guarantee disentanglement (Section \ref{sec:acoustic-disen}) and may still result in redundancy within the time-varying codes.
+
+### Acoustic Tokens with Semantic Distillation
+
+#### Motivation
+
+Acoustic tokens are a convenient choice for spoken language models, as they can be directly converted back to waveforms without the need for extra vocoders.
+However, if reconstruction is the sole objective of these tokens, their representation space may become overly complex and overly focused on acoustic details, in contrast to natural language tokens that primarily carry semantic information.
+A natural improvement is to incorporate speech semantic features either from speech self-supervised learning (SSL) models, supervised models, or even text transcriptions.
+Since speech SSL models aim to capture high-level phonetic or semantic information without external supervision~\cite{mohamed2022self}, integrating SSL features does not impose additional data requirements for injecting semantic information into the training process.
+Acoustic tokens with criteria beyond reconstruction are sometimes referred to as having a ``mixed objective''~\cite{cui2024recent}.
+Given that the primary purpose of these models remains acoustic reconstruction in these models, we continue to refer to them as acoustic tokens.
+The process of introducing semantic information into acoustic tokens is termed \textbf{semantic distillation}, with approaches summarized in Fig. \ref{fig:acoustic-distill}.
+
+#### Approaches
+
+##### Semantic feature guidance
+
+The earliest effort in semantic distillation is to guide some RVQ layers in acoustic tokens towards semantic features, which are typically SSL features.
+Since information in RVQ naturally follows a coarse-to-fine order, guiding early RVQ layers towards semantic-oriented features helps establish and reinforce a semantic-to-acoustic information hierarchy.
+For example, SpeechTokenizer~\cite{zhang2024speechtokenizer} uses a HuBERT~\cite{hsu2021hubert} SSL model to guide the first RVQ layer in EnCodec.
+This ensures that the first RVQ layer contains more semantic information, thereby pushing acoustic details to the subsequent RVQ layers.
+This distillation is implemented either by regressing the first RVQ output to continuous HuBERT embeddings or by classifying it into discrete HuBERT tokens.
+LLM-Codec alternatively uses Whisper~\cite{whisper} and T5~\cite{raffel2020exploring} as semantic teachers.
+Mimi~\cite{kyutai2024moshi} uses a WavLM~\cite{chen2022wavlm} teacher and applies distillation to a specialized VQ module rather than the first RVQ layer.
+Since SSL feature guidance occurs only during the training stage, it does not incur additional inference costs.
+It has been reported that TTS language models trained with such acoustic tokens exhibit better robustness than those with unguided tokens~\cite{zhang2024speechtokenizer}.
+
+##### Fixed Semantic Codebook
+
+A more direct approach to achieve semantic distillation is to integrate semantic knowledge into the codebook of quantizers.
+This forces the quantization space itself to be more semantic-related.
+This method is proposed in LLM-Codec~\cite{yang2024uniaudio15} where all three RVQ codebooks are initiated from the token embedding module of LLaMa-2~\cite{touvron2023llama2} and remain frozen during training.
+This approach not only reduces the bitrate of the codec but also significantly enhances the semantic representation ability of LLM-Codec.
+
+##### Semantic Features as Inputs or Outputs
+
+Semantic features can also be compressed together with the acoustic features.
+This requires the encoder and quantizer to construct a shared acoustic and semantic space that balances the two information sources.
+The first attempt in this direction is made in \cite{siahkoohi22_interspeech} where Conformer representations from a pretrained wav2vec 2.0~\cite{baevski2020wav2vec} are combined with CNN encoder outputs for quantization.
+SemantiCodec~\cite{liu2024semanticodec} quantizes AudioMAE~\cite{huang2022masked} SSL features without relying on acoustic inputs.
+The quantized SSL features then serve as a condition for acoustic reconstruction using latent diffusion, which resembles a vocoder that transforms semantic inputs into acoustic outputs.
+Providing aligned phoneme sequences instead of SSL features to the quantizer has also shown benefits on reducing bitrates~\cite{du2024funcodec}.
+
+Moreover, semantic features can also serve as outputs, thereby reinforcing the constraint that semantic information be compressed into the discrete latent space.
+For instance, \cite{guo2024socodec,ye2024codec} combine hidden HuBERT embeddings with acoustic features before RVQ and jointly optimizes acoustic and semantic reconstruction objectives.
+X-Codec 2.0~\cite{ye2025llasa} improves it by using w2v-BERT 2.0~\cite{barrault2023seamless} and FSQ.
+
+#### Challenges
+
+Guiding part of the RVQ layers towards semantic features does not guarantee that acoustic information is encoded in the remaining layers, as shown by the degraded VC performance in SpeechTokenizer~\cite{zhang2024speechtokenizer}.
+It may impose a greater challenge for the VQ layer to encode both acoustic and semantic information if semantic features serve as inputs as well.
+Additionally, fixing a semantic codebook could negatively impact acoustic reconstruction ability, as the VQ representation space becomes overly restricted.
+
+### Acoustic Tokens with Disentanglement
+
+#### Motivation
+
+Another line of mixed-objective acoustic tokens is {disentanglement}.
+A prominent research direction is the disentanglement of speaker timbre information, as this is a global trait among all the speech information aspects.
+Encoding speaker information into every token timestep is redundant; thus, removing the global speaker timbre can make the information in acoustic tokens more compact and reduce the necessary bitrate.
+Speaker-decoupled speech tokens can alleviate the modeling burden for downstream tasks. For example, a TTS model using these tokens can achieve independent control over prosody and speaker identity.
+The disentanglement of speaker timbre also enables an acoustic token to perform voice conversion (VC), as timbre from the target speaker can be easily combined with the speaker-agnostic content tokens from the source speech.
+
+Note that in Section \ref{sec:acoustic}, it is mentioned that some codecs introduce a global encoder to reduce the necessary bitrate of time-variant tokens~\cite{jiang2023disentangled,ticodec,singlecodec,zheng2024freecodecdisentangledneuralspeech}.
+They have already demonstrated some ability to decouple global speaker timbre and local contents, albeit in an \textbf{implicit} manner through the natural information bottleneck from VQ.
+In this section, we elaborate on \textbf{explicit} methods, which involve specialized training techniques and criteria to achieve disentanglement.
+
+#### Approaches
+
+##### Gradient reversal layer (GRL)
+
+The GRL technique~\cite{drl} is commonly used for disentanglement. Suppose speaker information needs to be disentangled, and a classifier (or speaker verifier, etc.) $s_\mu(\cdot)$ receives some latent feature $\bm h$ from the acoustic token to perform speaker discriminative tasks.
+GRL operates by negating the gradient sign before $s_\mu(\cdot)$, thereby forcing $\bm h$ to fool the speaker classifier while the classifier itself improves, similar to adversarial training.
+
+SSVC~\cite{SSVC} is one of the pioneering efforts in this direction.
+SSVC attempts to decouple content and speaker representations from WavLM features.
+The content branch is quantized via RVQ, and the speaker branch is trained using a contrastive loss to produce speaker embeddings.
+Disentanglement is enforced by a GRL between the speaker embeddings produced from the speaker branch and the content representations.
+
+Similarly, PromptCodec minimizes an SSIM loss~\cite{wang2004image} between content and speaker representations, with the help of a pretrained speaker verification model.
+
+Such GRL technique is not limited to disentangling speaker timbre alone.
+FACodec~\cite{facodec} employs supervised decoupling to factorize speech into speaker timbre, content, prosody, and acoustic detail information.
+The timbre extractor in FACodec is optimized via a speaker classification loss.
+
+For the other components -- prosody, content, and acoustic detail -- separate RVQ modules are applied prior to the supervised decoupling process.
+For each component, some supervision signal with the desired information is applied, and GRL is employed to other non-related information components.
+
+These three quantized features are then combined before applying GRL with the speaker information.
+Finally, the decoder integrates all four information branches to reconstruct the speech signal.
+
+##### Perturbation
+
+For speaker disentanglement, a more straightforward approach is to apply speaker timbre perturbations to speech signals and leverage the strong information bottleneck created by the discrete VQ module.
+When the encoder is unable to learn sufficient timbre information, and the decoder is provided with prominent timbre, the bottleneck in the middle will naturally prevent timbre from being encoded~\cite{qian2019autovc}.
+This idea is adopted in LSCodec~\cite{guo2024lscodec} to achieve speaker decoupling and ultra-low-bitrate coding.
+LSCodec leverages continuous WavLM features to represent speaker timbre.
+These features are fed to a Conformer-based decoder by position-agnostic cross attention~\cite{du2024unicats,li2024sef}.
+A stretching-based speaker perturbation algorithm is applied to the input waveform to facilitate speaker disentanglement.
+The training process of LSCodec involves multiple stages where a VQ module is injected after constructing a speaker-decoupled continuous space.
+Through this approach, LSCodec achieves high-quality speech reconstruction and voice conversion using only a single codebook with very low bitrates.
+
+##### Source Separation
+
+Apart from the disentanglement of speaker timbre, source separation has also been explored in the context of acoustic tokens.
+SD-Codec~\cite{bie2024learning} proposes to decouple different audio sources in the neural codec, like speech, music, and sound effects, by employing  multiple parallel RVQ modules.
+This approach allows for more efficient and targeted processing of each audio component.
+
+#### Challenges
+
+The GRL technique for disentanglement inherently carries the risk of a more complex optimization trajectory.
+Additionally, some disentanglement methods require supervised data~\cite{facodec}, which imposes a significant constraint.
+Due to the intricate nature of speech informatics, current efforts are still suboptimal compared to semantic tokens, particularly in terms of VC performance~\cite{guo2024lscodec}.
+
 ## 4·Experiments: 实验
 
 <table><tr><td width="50%">
