更新 Survey 语义Token

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -637,9 +637,192 @@ Due to the intricate nature of speech informatics, current efforts are still sub
 
 </td></tr></table>
 
-## 4·Experiments: 实验
+## 4·Speech Tokenization Methods: Semantic Tokens
 
 <table><tr><td width="50%">
+
+Semantic tokens refer to discrete speech representations from discriminative or self-supervised learning (SSL) models.
+While we use the term \textit{semantic tokens} to maintain consistency with prior works, some researchers recently argue that SSL features are more accurately described as \textit{phonetic} than \textit{semantic}~\cite{choi24b_interspeech} in nature.
+Hence to clarify, in this review, semantic tokens should be more accurately defined as the complementary set of acoustic tokens, such that they are not primarily aimed at reconstruction purposes.
+In practice, the vast majority of these tokens are designed for discriminative tasks and are believed to have a strong correlation with phonetic and semantic information~\cite{wells22_interspeech,mohamed2022self,sicherman2023analysing,yeh2024estimating}.
+
+</td><td>
+
+</td></tr></table>
+
+### Semantic Tokens from General-Purpose SSL
+
+#### Motivation
+
+<table><tr><td width="50%">
+
+Speech SSL models have consistently outperformed many traditional methods in various speech tasks~\cite{superb,mohamed2022self}.
+Their potential has been extensively mined in discriminative tasks such as automatic speech recognition (ASR)~\cite{wav2vec,vq-wav2vec,hsu2021hubert,zhang2020pushing}, automatic speaker verification (ASV)~\cite{chen2022wavlm,jung2024espnet,miara24_interspeech}, speech emotion recognition (SER)~\cite{morais2022speech,chen2022wavlm,MADANIAN2023200266,ma-etal-2024-emotion2vec} and speech translation (ST)~\cite{wu20g_interspeech,nguyen20_interspeech,babu22_interspeech}.
+Discretized SSL tokens are initially favored for reducing computation costs and improving robustness against irrelevant information for ASR~\cite{chang23b_interspeech}.
+As language models have gained increasing attention, these SSL tokens have been further explored in generative tasks such as TTS~\cite{VQTTS,kharitonov2023speak,vectokspeech} and SLM~\cite{lakhotia2021generative,borsos2023audiolm,hassid2024textually}.
+This is because they can be considered high-level abstractions of speech semantics that are largely independent of acoustic details.
+
+</td><td>
+
+</td></tr></table>
+
+#### Approaches
+
+<table><tr><td width="50%">
+
+SSL models initiate the learning process by defining a pretext task which enables the model to learn meaningful representations directly from the data itself.
+Typical speech SSL models employ CNNs and Transformer encoders to extract deep contextual embeddings.
+When it comes to semantic tokens, there are mainly two ways to extract those discrete tokens from an SSL model (see upper part of Fig.\ref{fig:semantic-types}):
+- External quantization, like clustering or training a VQ-VAE. This refers to extracting continuous embeddings from a certain layer or multiple layers in a pretrained SSL model, and performing quantization manually.
+For example, a common semantic token is the HuBERT+kmeans units, where k-means clustering is performed on a HuBERT Transformer layer with a portion of training data~\cite{lakhotia2021generative,kharitonov-etal-2022-text}.
+It is also feasible to perform clustering on multiple layers~\cite{shi24h_interspeech,mousavi2024should}, or train a VQ-VAE on the SSL hidden embeddings~\cite{huang2023repcodec,wang2024maskgct}.
+- When an SSL model contains an inner quantizer that is trained together with other network modules, its outputs can also be regarded as semantic tokens.
+Many SSL models involve quantizers to produce targets for their training objectives~\cite{vq-wav2vec,baevski2020wav2vec,chiu2022self,zhu2025muq}.
+This approach provides an efficient and effective way of extracting semantic tokens.
+
+Note that for SSL models with an inner quantizer, it is still practical to perform external quantization on its continuous embeddings, like wav2vec 2.0~\cite{baevski2020wav2vec}.
+However, these two methods -- internal and external quantization -- may result in different patterns of information exhibition, which we will investigate in Section \ref{sec:analysis}.
+
+For general-purpose SSL models, there are different designs on the pretext task~\cite{mohamed2022self}.
+Table \ref{tab:semantic-metadata} provides a high-level summary of well-known semantic tokens.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+##### Contrastive
+
+This type of speech SSL models aims to learn representations by distinguishing a target sample (positives) from distractors (negatives) given an anchor~\cite{mohamed2022self}.
+They minimize the latent space similarity of negative pairs and maximize that of the positive pairs.
+For semantic tokens, vq-wav2vec~\cite{vq-wav2vec} and wav2vec 2.0~\cite{baevski2020wav2vec} are two representative contrastive SSL models.
+They involve a quantizer to produce localized features that is contrastively compared to contextualized continuous features.
+Vq-wav2vec~\cite{vq-wav2vec} uses pure CNN blocks while wav2vec 2.0~\cite{baevski2020wav2vec} adopts a Transformer for stronger capacity.
+Both use GVQ quantizers with two groups to expand the VQ space.
+Wav2vec 2.0 has also been extended to massively multilingual versions~\cite{conneau21_interspeech,babu22_interspeech,pratap2024scaling}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+##### Predictive
+
+This type of speech SSL models incorporates an external target for prediction, either from signal processing features or another teacher network.
+A popular line of work is HuBERT~\cite{hsu2021hubert}.
+It takes raw waveforms as inputs, applies random masks on the hidden representations before Transformer contextual blocks, and then predicts k-means quantized targets from MFCC or another HuBERT teacher.
+
+WavLM~\cite{chen2022wavlm} augments HuBERT by additional speaker and noise perturbations to achieve superior performance in more paralinguistic-related tasks.
+There are no inner quantizers in both models, so external quantization like k-means clustering is necessary to obtain semantic tokens.
+BEST-RQ~\cite{chiu2022self} changes the prediction target to the output of a random projection quantizer.
+
+The next-token prediction criterion from language models (LMs) have also been adopted into speech SSL~\cite{turetzky2024last,han2024nest}, either with or without a pretrained text LM.
+This method emphasizes the autoregressive prediction property of learned tokens that may be better suited for the LM use case.
+
+</td><td>
+
+</td></tr></table>
+
+#### Challenges
+
+<table><tr><td width="50%">
+
+Firstly, SSL models typically require large amount of data to train, as indicated in Table \ref{tab:semantic-metadata}.
+For SSL models without a built-in quantizer during pretraining, k-means clustering is a prevalent approach to obtain discrete units.
+However, given that most SSL models operate in high-dimensional spaces (e.g., with 768 or 1024 dimensions), the space and time complexity of k-means clustering are substantial.
+The clustering results can sometimes be unreliable due to the curse of dimensionality in Euclidean space.
+Moreover, it is often reported, and will also be shown by experiments in Section \ref{sec:analysis}, that discretized SSL units lose much acoustic details after quantization~\cite{polyak21,sicherman2023analysing,mousavi2024dasb}.
+Different clustering settings, such as the chosen layer and vocabulary size, can lead to different outcomes within a single model.
+Finally, since most SSL models utilize Transformer blocks, their causality and streaming ability are compromised.
+
+</td><td>
+
+</td></tr></table>
+
+### Semantic Tokens from Perturbation-Invariant SSL
+
+#### Motivation
+
+<table><tr><td width="50%">
+
+As SSL tokens feature semantic or phonetic information, a major concern is to improve the resistance against perturbations in the input signal.
+This kind of invariance includes noise and speaker aspects that don't affect the contents of speech.
+Noise invariance refers to the invariance against signal augmentations such as additive noise, reverberations, etc.
+Speaker invariance aims to remove speaker information, similar to speaker-disentangled acoustic tokens.
+In the training process, perturbations are often explicitly introduced in these perturbation-invariant SSL models.
+The original and perturbed view of an utterance are both fed to the same network (or teacher and student networks), and an external loss to reduce the impact of perturbation is applied.
+The middle part of Fig.\ref{fig:semantic-types} depicts a typical perturbation-invariant SSL model.
+
+</td><td>
+
+</td></tr></table>
+
+#### Approaches
+
+<table><tr><td width="50%">
+
+##### Perturbations
+
+The perturbations can either be designed to augment the acoustics or alter the speaker timbre, depending on the objective of invariance.
+These perturbations usually preserve temporal alignments, meaning that the perturbed utterance and the original one are strictly synchronized.
+For noise-invariant SSL tokens, basic signal variations like time stretching, pitch shifting, additive noise, random replacing, reverberation, and SpecAugment~\cite{park2020specaugment} are commonly applied~\cite{gat2023augmentation,ccc-wav2vec2.0,messica2024nast,huang2022spiral}.
+Typical speaker timbre perturbations include formant and pitch scaling as well as random equalization~\cite{qian2022contentvec,chang23_interspeech,chang2024dc}.
+In contrast, random time stretching is applied as speaker perturbation in \cite{hwang2024removing}, which alters the tempo in each random segment.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+##### Contrastive-based Methods
+
+Contrastive loss is a common method to obtain perturbation-invariant representations.
+In this context, the contrastive loss is a modified version of that used in wav2vec 2.0~\cite{baevski2020wav2vec}.
+Given two embedding sequences derived from the original and perturbed utterances, assuming the perturbation preserves frame-wise alignment, the positive sample of an anchor is taken from the same position in the other utterance.
+This is because the content remains unchanged by the perturbation, thus the same position of two representation sequences should encode the same information.
+In noise-invariant models~\cite{huang2022spiral,ccc-wav2vec2.0}, negative samples are selected from the other utterance relative to the anchor.
+However, in speaker-invariant models~\cite{qian2022contentvec,hwang2024removing}, negative samples are selected from the same utterance as the anchor.
+Specifically, in \cite{hwang2024removing}, soft attention pooling is applied to create equal-length representation sequences from two utterances with different durations.
+This approach forces SSL models to ignore acoustic differences and focus solely on the unperturbed content.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+##### Distribution-based Methods
+
+Another method to achieve invariance is to minimize some distance metrics between the representations extracted from the original and perturbed utterances.
+In existing perturbation-invariant SSL models, this is typically accomplished using a cross-entropy loss between the underlying distributions in the VQ module of the SSL model.
+NAST~\cite{messica2024nast} trains a Gumbel-based VQ-VAE on HuBERT features and enforces similarity between the Gumbel distributions Eq.\eqref{eq:gumbel-softmax} derived from the original and augmented utterances.
+Spin~\cite{chang23_interspeech} and DC-Spin~\cite{chang2024dc} explore a speaker-invariant clustering algorithm for HuBERT features.
+Similar to NAST~\cite{messica2024nast}, Spin employs a cross-entropy loss to ensure that the distributions over codebook entries are similar between the original and perturbed utterances.
+This distribution-based approach forces the same content to be quantized to the same index regardless of acoustic conditions.
+
+</td><td>
+</td></tr>
+<tr><td>
+
+##### CTC-based Methods
+
+Noise invariance can also be achieved like an ASR task with perturbed speech inputs.
+As semantic tokens from SSL models are highly content-related, these tokens extracted from the original clean utterance can serve as some pseudo-label for a perturbed view.
+In \cite{gat2023augmentation}, a connectionist temporal classification (CTC)~\cite{ctc} loss is calculated between quantized tokens from the augmented signal and a pretrained HuBERT+kmeans pseudo-labels from the clean signal.
+This pushes the quantized tokens to have the same phonetic structure with the pseudo-labels.
+
+</td><td>
+
+</td></tr></table>
+
+#### Challenges
+
+<table><tr><td width="50%">
+
+While noise and speaker-invariance have emerged as promising approaches in semantic tokens, they currently rely on content-preserving perturbations that are typically hand-crafted.
+Most existing methods have only been evaluated on small-scale data and models.
+It also remains unclear how these methods will generally benefit generative tasks such as speech generation and spoken language modeling.
+
+</td><td>
 
 </td></tr></table>
 
