更新 Survey 语义Token

--- a/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
+++ b/Surveys/2025.02.10__Survey__Recent_Advances_in_Discrete_Speech_Tokens_(26P).md
@@ -826,6 +826,66 @@ It also remains unclear how these methods will generally benefit generative task
 
 </td></tr></table>
 
+### Semantic Tokens from Supervised  Models
+
+<table><tr><td width="50%">
+
+As representing semantic or phonetic information is the major purpose of semantic tokens, a more direct way to achieve this is through supervised learning.
+A famous example shown at the bottom of Fig.\ref{fig:semantic-types} is the $\mathcal S^3$ Tokenizer from CosyVoice~\cite{du2024cosyvoice}.
+It places a single-codebook VQ layer between two Transformer encoder modules and optimizes the network through an ASR loss similar to Whisper~\cite{whisper}.
+The same method is adopted in \cite{zeng2024scaling,zeng2024glm} where the frame rate is further reduced to 12.5Hz.
+CosyVoice 2~\cite{cosyvoice2} improves $\mathcal S^3$ Tokenizer by replacing plain VQ with FSQ for better codebook utilization.
+Note that in this kind of supervised semantic tokens, it is the output of the VQ layer that serves as tokens.
+This allows for more preservation of paralinguistic information than directly transcribing speech into text.
+These supervised tokenizers are trained on massive paired speech-text data, and have demonstrated rich speech content understanding capabilities~\cite{du2024cosyvoice,fang2024llamaomni}.
+
+However, training these models is highly costly due to the heavy data demands.
+Training with only the ASR task may still result in the loss of some prosody information.
+Although \cite{cosyvoice2} has demonstrated that its supervised tokenizer trained on Chinese and English can also work in Japanese and Korean, it remains unclear how well these supervised tokenizers generalize to more unseen languages.
+
+</td><td>
+
+</td></tr></table>
+
+### Length Reduction by Deduplication and Acoustic BPE
+
+<table><tr><td width="50%">
+
+In most cases, the frame rate of discrete speech tokens ranges from 25 to 100Hz.
+This leads to a huge discrepancy in lengths between speech representations and the underlying text modality.
+This discrepancy has been a critical issue in building decoder-only TTS and other LM-based speech generation tasks, since longer sequences result in harder training and more unstable inference.
+Therefore, length reduction techniques have been proposed to address this issue.
+These methods are inspired by language processing techniques and are thus more closely related to semantic tokens.
+Note that although these length reduction methods are universal across token types, they are less frequently applied to acoustic tokens.
+This is because acoustic tokens usually involve multiple VQ streams that complicate token-level operations.
+
+A common approach to reduce token sequence lengths is deduplication~\cite{chang23b_interspeech,chang2024exploring}, i.e. removing the repeated consecutive tokens in a sequence.
+Since the encoded continuous features are often close in consecutive frames where the speech dynamics do not change rapidly, they are likely to be quantized to the same unit.
+Therefore, removing these redundant tokens can yield a more phonetic representation.
+When the deduplicated tokens are used for generative modeling, a unit-to-speech model (similar to TTS) should be employed to upsample the tokens and convert them back to acoustic signals~\cite{lakhotia2021generative}.
+
+Another popular approach to reducing the length of speech token sequences is acoustic byte-pair encoding (BPE)\footnote{The term ``acoustic'' here is used to distinguish it from traditional BPE applied to text tokens, rather than referring to ``acoustic tokens''.} or so-called subword modeling~\cite{hayashi2020discretalk,ren22_interspeech,chang23b_interspeech,shen2024acoustic,dekel24_interspeech}.
+Similar to text BPE~\cite{Gage1994ANA}, acoustic BPE iteratively merges the two most frequent consecutive tokens and adds the merged token to the vocabulary.
+After training on a corpus, a deterministic BPE mapping is established between original token combinations and the new vocabulary.
+This mapping enables a lossless compression algorithm, allowing tokens to be perfectly reconstructed after BPE decoding.
+This operation can identify certain morphological patterns in token sequences, and offers a powerful way to remove redundant tokens.
+In practice, acoustic BPEs on HuBERT semantic tokens has demonstrated significant speed and performance gains in ASR~\cite{chang23b_interspeech,chang2024exploring}, spoken language modeling~\cite{shen2024acoustic,dekel24_interspeech} and TTS~\cite{li24qa_interspeech,vectokspeech}.
+
+Although deduplication is a simple and training-free method, acoustic BPE offers several unique advantages over it. First, acoustic BPE can identify redundant patterns that are not simply repetitions, whereas deduplication only removes exact duplicates. Additionally, deduplication discards the duration information of every token in the resulting sequence. This could be problematic for downstream tasks, as important rhythmic information may reside in the repetitions of tokens. In contrast, acoustic BPE preserves duration information by encoding repetitions of varying lengths into distinct new tokens. Furthermore, acoustic BPE is flexible in terms of target vocabulary size, which can be adjusted based on the desired length reduction ratio and downstream performance.
+
+We visualize the length reduction effect of BPE on different speech tokens in Fig.\ref{fig:bpe-effect}.
+In addition to semantic tokens from various models and different k-means clusters in HuBERT, we also experiment with acoustic tokens.
+For acoustic tokens with multiple codebooks, we apply BPE only to the first quantizer, in accordance with the current speech generation paradigm~\cite{valle}.
+From Fig.\ref{fig:bpe-effect}, it is evident that different types of tokens exhibit very distinct patterns.
+Semantic tokens generally show significant length reduction when applying BPE, especially for HuBERT models with fewer k-means clusters.
+For single-codebook acoustic tokens, speaker-decoupled LSCodec tokens shows more reduction than general-purpose WavTokenizer and BigCodec.
+For a single RVQ layer among multiple-codebook acoustic tokens, the reduction effect is also significant.
+These findings suggest that the effect of BPE is negatively correlated with the information density in the speech tokens: the less information, the more length reduction achieved by BPE.
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
 <table><tr><td width="50%">
